<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterCodeViewerActivity"
    android:background="@color/blue_white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/enter_your_code_to_track_owner_s_hydroponic"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/enter_code_viewer_1" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/enter_code_viewer_2" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/hydroponic_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:layout_width="121dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:text="@string/redeem"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>